syntax = "proto3";

import "google/protobuf/empty.proto";

service DADTKVClientService {
	rpc TxSubmit(TxSubmitRequest) returns (TxSubmitResponse);
	rpc Status(google.protobuf.Empty) returns (StatusResponse);
}

message DadInt {
	string key = 1;
	int32 value = 2;
}

message TxSubmitRequest  {
	string clientId = 1;
	repeated string read = 2;
	repeated DadInt write = 3;
}

message TxSubmitResponse {
	repeated DadInt values = 1;
}

message StatusResponse {
	bool status = 1;
}